# mcp-agile-flow

./: .env.test  .gitignore  .mypy.ini  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README-FastMCP.md  README.md  README_TESTING.md  check_parameters.py  check_tools.py  coverage.xml  example_tool_with_descriptions.py  inspect_server.sh  install.sh  mcp-server-config.json  migration_summary.md  pyproject.toml  run_mcp_server.py  run_mcp_tests.sh  run_sample_project_test.sh  run_server.sh  run_simple_mcp_server.py  setup.cfg  setup.py  setup_cursor_mcp.py  simple_server.py  test_default_path.py  test_fastmcp_comprehensive.py  test_fastmcp_direct.py  test_fastmcp_resources.py  test_fastmcp_server.py  test_get_project_path.py  test_get_project_settings.py  test_mcp_server.py  test_mcp_server.sh  test_mcp_tools.py  (+7 more)
.cursor/rules/: 000-cursor-rules.mdc  800-template-commands.mdc  900-brd.mdc  901-prd.mdc  902-arch.mdc  903-story.mdc  905-makefile-usage.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-tests.yml
ai-docs/: arch.md  brd.md  cursor-auto-rules-agile-workflow-packed.txt  prd.md
ai-docs/epic-1-git-workflow/: story-1-commit-template.md  story-2-cursor-rule.md
ai-docs/epic-1-think-tool/: epic-summary.md  story-1-robust-triggers.md
ai-docs/epic-2-minor-enhancements/: story-1-template-handling.md  story-2-fix-prime-context.md
ai-docs/epic-5-mcp-migration/: story-1-migration-core.md
ai-docs/epic-7-memory-graph-removal/: epic-summary.md  progress.md  story-1-remove-memory-graph-core.md  story-2-remove-server-integration.md  story-3-remove-tests.md  story-4-update-docs.md
ai-kngr/: memory.json  memory.md
docs/: README.md  alternative_configs.md  cursor-auto-rules-technical-requirements.md  cursor-auto-rules-user-guide.md  enhanced_features.md  fastmcp-examples.txt  git-mcp-server-docs.md  ide_rules_usage.md  implementation.md  initialize_project.md  knowledge_graph.md  mcp-agile-flow-server-spec-simplified.md  mcp-agile-flow-server-spec.md  mcp-servers-git-packed.txt  mcp-think-tool.xml  mcp_config.json  mcp_config_template.json  mcp_server_cheatsheet.md  server_migration.md  setup.md  simple_server_usage.md  technical.md  testing_initialize_project.md  tools.md  user-guide.md
mcp-agile-flow/: .clinerules  README.md  agile_flow_sdk.py  pyproject.toml  server.py  test_ide_rules.py  test_server.py
mcp-agile-flow/agile-docs/: progress.md  project.md
mcp-agile-flow/agile_flow/: __init__.py  config.py
mcp-agile-flow/agile_flow/mcp/: __init__.py  protocol.py  tools.py
mcp-agile-flow/agile_flow/scripts/: __init__.py  server.py
mcp-agile-flow/agile_flow/storage/: __init__.py  document_generator.py  file_manager.py  templates.py
mcp-agile-flow/agile_flow/tools/: __init__.py  ide_rules.py  project.py
mcp-agile-flow/agile_flow/utils/: __init__.py  logger.py
mcp-agile-flow/docs/: cline_setup.md  local_setup.md  sdk_setup.md
reports/: dead_code_report.html  dead_code_report.json  dead_code_report.txt
scripts/: cleanup_archives.sh  mcp_via_agno_agent.py  migrate_server_tests.sh  run_mcp_server.py
scripts/archive/legacy/: check_tools.py
scripts/quality/: analyze_dead_code.py
src/mcp_agile_flow/: __init__.py  __main__.py  adapter.py  fastmcp_server.py  fastmcp_tools.py  initialize_ide_rules.py  memory_graph.py  migration_tool.py  models.py  register_memory_tools.py  rules_migration.py  server.py  simple_server.py  test_adapter.py  think_tool.py  utils.py  version.py
src/mcp_agile_flow/ai-templates/: template-brd.md  template-epic-summary.md  template-git-commit.md  template-project-ideation.md
src/mcp_agile_flow/cursor_rules/: 1001-python-uv.md  1002-python-makefile-uv.md  105-vulture-dead-code-analysis.md  800-template-commands.md  800-vertical-slicing-hybrid-testing.md  801-git-commit.md  802-project-ideation.md  903-story.md  904-progress-tracking.md  905-makefile-usage.md  906-mcp-server-dev-python.md  950-visual-integration-testing-guide.md  950-visual-test-output.md  README.md
src/mcp_agile_flow/cursor_templates/: template-arch.md  template-prd.md  template-story.md
src/mcp_agile_flow/ide_rules/: ide_rules.md
src/mcp_agile_flow/windsurf_templates/: windsurf_rules_template.md
tests/: conftest.py  test_adapter.py  test_agent.py  test_agile_flow_project_path.py  test_brd.py  test_env_variables.py  test_env_variables_adapter.py  test_fastmcp_integration.py  test_fastmcp_tools.py  test_fastmcp_tools_adapter.py  test_initialize_ide.py  test_initialize_ide_adapter.py  test_initialize_ide_rules.py  test_initialize_ide_rules_adapter.py  test_integration.py  test_integration_adapter.py  test_json_validation.py  test_markdown_mermaid.py  test_mcp_client.py  test_mcp_config_migration.py  test_mcp_via_agno_agent.py  test_memory_graph.py  test_nl_commands.py  test_prime_context.py  test_prime_context_adapter.py  test_project_configuration.py  test_project_path.py  test_project_settings.py  test_rules_migration.py  test_think_tool.py
tests/archive/adapter_tests/: test_integration_adapter.py  test_mcp_config_migration_adapter.py  test_project_configuration_adapter.py
tests/archive/legacy/: test_mcp_config_migration.py
tests/archive/path_tests/: test_root.py  test_root_tool.py  test_root_with_path.py
tests/think_tool/: test_robust_triggers.py  test_think_deeper.py
