[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-agile-flow"
version = "0.1.0"
authors = [
    {name = "Shoaib Mian", email = "smian0@users.noreply.github.com"},
]
description = "MCP server implementations for enhancing agile workflows in Cursor"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.5.0",
    "aiohttp>=3.11.14",
    "fastapi>=0.115.11",
    "pydantic>=2.10.6",
    "typer>=0.15.2",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "rich>=13.9.4",
    "GitPython>=3.1.44",
]

[project.optional-dependencies]
test = [
    "agno>=1.1.16",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "black==25.1.0",
    "flake8==7.1.2",
    "mypy==1.15.0",
    "ruff==0.11.2",
    "openai>=1.68.2",
    "httpx-sse>=0.4.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-agile-flow"
Issues = "https://github.com/yourusername/mcp-agile-flow/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--verbose"
norecursedirs = ["tests/archive"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]  # Temporarily ignore line length errors

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to false to start with, can be made stricter later
disallow_incomplete_defs = false  # Set to false to start with, can be made stricter later
ignore_missing_imports = true  # Ignore import errors for missing type stubs

[project.scripts]
mcp-agile-flow = "mcp_agile_flow.server:run_server"
mcp-agile-flow-fastmcp = "mcp_agile_flow.fastmcp_server:run"

[project.entry-points."mcp.servers"]
agile-flow = "mcp_agile_flow.server:run"
agile-flow-fastmcp = "mcp_agile_flow.fastmcp_server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_agile_flow"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.forced-include]
"src/mcp_agile_flow/cursor_rules" = "mcp_agile_flow/cursor_rules"
"src/mcp_agile_flow/cursor_templates" = "mcp_agile_flow/cursor_templates"
"new_server.py" = "new_server.py"
