[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-agile-flow"
version = "2.0.0"
description = "MCP server that enhances agile workflows with project management tools"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp",
    "pydantic>=2.10.6",
    "aiofiles",
    "python-dateutil",
    "typing-extensions",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "coverage-badge>=1.1.2",
    "vulture>=2.14",
]

[project.urls]
"Homepage" = "https://github.com/smian0/mcp-agile-flow"
"Bug Tracker" = "https://github.com/smian0/mcp-agile-flow/issues"

[project.scripts]
mcp-agile-flow = "mcp_agile_flow.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.vulture]
min_confidence = 80
exclude = ["tests/", "*/__pycache__/", "*.pyc"]
ignore_names = ["args", "kwargs", "request", "cls", "self"]
ignore_decorators = ["@app.route", "@require", "@abstractmethod"]
