[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-agile-flow"
version = "0.1.0"
description = "A lightweight Python MCP server for Agile project lifecycle management and documentation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["agile", "documentation", "mcp", "project-management"]
authors = [
    {name = "MCP Agile Flow Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Project Management",
]
dependencies = [
    "typing-extensions >= 4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/modelcontextprotocol/mcp-agile-flow"
"Bug Tracker" = "https://github.com/modelcontextprotocol/mcp-agile-flow/issues"

[project.scripts]
mcp-agile-flow = "agile_flow:main"
mcp-agile-flow-start = "agile_flow.scripts.server:main"

[tool.setuptools]
package-dir = {agile_flow = "agile_flow"}

[tool.setuptools.packages.find]
include = ["agile_flow", "agile_flow.*"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.md"]
